--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       width: 400px;
       height: 200px;
       overflow: auto;
-      background-color: #f1f1f1;
+      background-color: #282424;
       padding: 10px;
     }
     
