--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     .code {
       font-family: "Courier New", monospace;
-      color: #333;
+      color: #F5EEEE;
       white-space: pre-wrap;
       font-size: 14px;
     }
