--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
       width: 400px;
       height: 200px;
       overflow: auto;
-      background-color: #282424;
+      background-color: #2C2C2C;
       padding: 10px;
     }
     
     .code {
       font-family: "Courier New", monospace;
-      color: #F5EEEE;
+      color: #F7F7F7;
       white-space: pre-wrap;
       font-size: 14px;
     }
