--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     }
   </style>
     <meta charset="UTF-8">
-    <title>Mi página web</title>
+    <title>Alan Werner - portfolio</title>
 </head>
 <body>
     <header>
-        <h1>Bienvenido a mi página web</h1>
+        <h1>Bienvenido a mi portfolio</h1>
     </header>
 
     <nav>
